--- a/acceuil.html
+++ b/acceuil.html
@@ -68,16 +68,8 @@
 
 
     <body>
-
-
+        <!-- Section 1 -->
         <main>
-
-            <div class="modal-dialog modal-lg">allo</div>
-
-            <a href="#" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2">
-                Custom focus ring
-            </a>
-
             <div id="carouselExampleIndicators" class="carousel slide active">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -111,6 +103,28 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
+            <!-- Section 2 -->
+            <div class="row">
+                <div class="col">
+                    1 of 2
+                </div>
+                <div class="col">
+                    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+                                padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+                                border-radius: 8px; will-change: transform;">
+                        <iframe loading="lazy"
+                            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                            src="https://www.canva.com/design/DAG5irp-8QY/lJ8htT4KNPtA4lP9TzqpaA/view?embed"
+                            allowfullscreen="allowfullscreen" allow="fullscreen">
+                        </iframe>
+                    </div>
+                    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG5irp-8QY&#x2F;lJ8htT4KNPtA4lP9TzqpaA&#x2F;view?utm_content=DAG5irp-8QY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                        target="_blank" rel="noopener">Création</a> par EG GE
+                </div>
+            </div>
+
+
 
         </main>
     </body>
@@ -211,8 +225,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
             integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
             crossorigin="anonymous"></script>
-
-
     </footer>
 
 </body>
