Ajout éléments bootstrap des section 2 et 3

--- a/acceuil.html
+++ b/acceuil.html
@@ -68,6 +68,7 @@
 
 
     <body>
+
         <!-- Section 1 -->
         <main>
             <div id="carouselExampleIndicators" class="carousel slide active">
@@ -103,31 +104,188 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="container container">
 
-            <!-- Section 2 -->
-            <div class="row">
-                <div class="col">
-                    1 of 2
-                </div>
-                <div class="col">
-                    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+                <!-- Section 2 -->
+                <div class="row">
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card’s content.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card’s content.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card’s content.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
                                 padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
                                 border-radius: 8px; will-change: transform;">
-                        <iframe loading="lazy"
-                            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-                            src="https://www.canva.com/design/DAG5irp-8QY/lJ8htT4KNPtA4lP9TzqpaA/view?embed"
-                            allowfullscreen="allowfullscreen" allow="fullscreen">
-                        </iframe>
+                            <iframe loading="lazy"
+                                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                                src="https://www.canva.com/design/DAG5irp-8QY/lJ8htT4KNPtA4lP9TzqpaA/view?embed"
+                                allowfullscreen="allowfullscreen" allow="fullscreen">
+                            </iframe>
+                        </div>
+                        <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG5irp-8QY&#x2F;lJ8htT4KNPtA4lP9TzqpaA&#x2F;view?utm_content=DAG5irp-8QY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                            target="_blank" rel="noopener">Création</a> par EG GE
                     </div>
-                    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG5irp-8QY&#x2F;lJ8htT4KNPtA4lP9TzqpaA&#x2F;view?utm_content=DAG5irp-8QY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-                        target="_blank" rel="noopener">Création</a> par EG GE
                 </div>
-            </div>
+
+                <!-- Section 3 -->
+                <div class="container justify-content-between align-items-center mt-5 mb-5">
+
+                    <div class="row g-0 bg-body-secondary position-relative">
+                        <div class="col-md-6 mb-md-0 p-md-4">
+                            <img src="..." class="w-100" alt="...">
+                        </div>
+                        <div class="col-md-6 p-4 ps-md-0">
+                            <h5 class="mt-0">Columns with stretched link</h5>
+                            <p>Another instance of placeholder content for this other custom component. It is intended
+                                to
+                                mimic what some real-world content would look like, and we’re using it here to give the
+                                component a bit of body and size.</p>
+                            <a href="#" class="stretched-link">Go somewhere</a>
+                        </div>
+                    </div>
 
 
+                    <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                            ago</small>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 order-md-last">
+                                <img src="Daveluyville-Images/fête famille août.jpg"
+                                    class="img-fluid rounded-start float-end" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                            ago</small>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 order-md-last">
+                                <img src="Daveluyville-Images/fête famille août.jpg"
+                                    class="img-fluid rounded-start float-end" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                            ago</small>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 order-md-last">
+                                <img src="Daveluyville-Images/fête famille août.jpg"
+                                    class="img-fluid rounded-start float-end" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                            ago</small>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 order-md-last">
+                                <img src="Daveluyville-Images/fête famille août.jpg"
+                                    class="img-fluid rounded-start float-end" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                            ago</small>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
         </main>
+
+
+        </div>
     </body>
+
+
+
     <footer class="py-5">
         <div class="row">
             <div class="col-6 col-md-2 mb-3">
