--- a/acceuil.html
+++ b/acceuil.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" aria-disabled="true">Disabled</a>
             </li>
             <li>
                 <i class="bi bi-facebook"></i>
