--- a/acceuil.html
+++ b/acceuil.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css  ">
 </head>
 
-<body>
+<body class="page-loisirs page-accent-top">
     <header>
         <ul class="nav justify-content-end">
             <li class="nav-item">
@@ -71,7 +71,8 @@
 
     </header>
 
-
+    <!-- Full-width color band for this page -->
+    <div class="page-band band-loisirs" aria-hidden="true"></div>
 
     <!-- Section 1 -->
     <main>
