Modif et ajout pour le design de la section #1 et du header + Ajout de logo

--- a/acceuil.html
+++ b/acceuil.html
@@ -26,42 +26,40 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " aria-disabled="true">Disabled</a>
+                <a class="nav-link ">Disabled</a>
             </li>
             <li>
                 <i class="bi bi-facebook"></i>
             </li>
             <li>
                 <i class="bi bi-envelope m-3 "></i>
-
             </li>
         </ul>
-        <nav class="navbar navbar-expand-lg bg-body-">
+        <nav class="navbar navbar-expand-lg primary-color" id="navbar">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <img class="navbar-brand" src="Daveluyville-Images/logo-1.png" alt="" srcset="">
-
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Loisirs</a>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <img class="navbar-brand h-25 " src="Daveluyville-Images/logo-1.png" alt="" srcset="">
+                    <ul class="navbar-nav ms-auto mb-0 mb-lg-0 ">
+                        <li class="nav-item mx-4">
+                            <a class="nav-link" href="#">Loisirs</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mx-4">
                             <a class="nav-link" href="#">Citoyens</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mx-4">
                             <a class="nav-link" aria-disabled="true">Municipalité</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mx-4">
                             <a class="nav-link" aria-disabled="true">Entreprises</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <input class="form-control mx-3" type="search" placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
@@ -71,12 +69,9 @@
 
     </header>
 
-    <!-- Full-width color band for this page -->
-    <div class="page-band band-loisirs" aria-hidden="true"></div>
-
     <!-- Section 1 -->
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide active">
+        <div id="carouselExampleIndicators " class="carousel slide active">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -108,28 +103,32 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-            <div class="vstack gap-5 position-absolute top-0 start-0 m-5">
-                <div class="loisirs d-flex">Loisirs</div>
-                <div class="citoyens">Citoyens</div>
-                <div class="municipalite">Municipalités</div>
-                <div class="entreprises">Entreprises</div>
+            <div class="vstack gap-5 position-absolute top-0 start-0 mt-5">
+                <div class="loisirs"><h1>Loisirs</h1></div>
+                <div class="citoyens"><h1>Citoyens</h1></div>
+                <div class="municipalite"><h1>Municipalités</h1></div>
+                <div class="entreprises"><h1>Entreprises</h1></div>
             </div>
         </div>
         <div class="container container">
 
             <!-- Section 2 -->
             <div class="row mt-5 mb-5">
+
                 <div class="col">
                     <div class="card" style="width: 25rem;">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up
-                                the
-                                bulk
-                                of the card’s content.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
+                            <div style="position: relative; width: 100%; height: 0; padding-top: 140.0000%;
+ padding-bottom: 0; margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+                                <iframe loading="lazy"
+                                    style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                                    src="https://www.canva.com/design/DAG6MEhvXRM/NeVy-eD2T3YDQ5s5N-urZA/view?embed"
+                                    allowfullscreen="allowfullscreen" allow="fullscreen">
+                                </iframe>
+                            </div>
+                            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG6MEhvXRM&#x2F;NeVy-eD2T3YDQ5s5N-urZA&#x2F;view?utm_content=DAG6MEhvXRM&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                                target="_blank" rel="noopener"></a> 
                         </div>
                     </div>
                     <div class="card" style="width: 25rem;">
@@ -177,128 +176,81 @@
 
                 <div class="row g-0 bg-body-secondary position-relative">
                     <div class="col-md-6 mb-md-0 p-md-4">
-                        <img src="..." class="w-100" alt="...">
+                        <img src="Daveluyville-Images/centre_sportif_facade.jpeg.jpg" class="w-100" alt="...">
                     </div>
                     <div class="col-md-6 p-4 ps-md-0">
-                        <h5 class="mt-0">Columns with stretched link</h5>
-                        <p>Another instance of placeholder content for this other custom component. It is
-                            intended
-                            to
-                            mimic what some real-world content would look like, and we’re using it here to give
-                            the
-                            component a bit of body and size.</p>
-                        <a href="#" class="stretched-link">Go somewhere</a>
+                        <h5 class="mt-0">Centre Piché</h5>
+                        <p>Que ce soit pour des cours, des locations de salles, un abonnement au Centre de
+                            conditionnement physique Beaudoin, la location de glace, tout peut désormais se faire sur la
+                            plateforme ! Cliquez ici pour accéder à la plateforme.</p>
+                        <a href="#" class="stretched-link">En savoir plus</a>
                     </div>
                 </div>
 
+                <div class="container justify-content-between align-items-center mt-5 mb-5">
 
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="..." class="img-fluid rounded-start" alt="...">
+                    <div class="row g-0 bg-body-secondary position-relative">
+                        <div class="col-md-6 mb-md-0 p-md-4">
+                            <img src="Daveluyville-Images/Logo-école-secondaire.jpg" class="w-40" alt="...">
+                            <img src="Daveluyville-Images/logo-école.jpg" class="w-40" alt="">
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
-                                        ago</small>
-                                </p>
+                        <div class="col-md-6 p-4 ps-md-0">
+                            <h5 class="mt-0">CSBF- Nos écoles</h5>
+                            <p>Les services scolaires de Daveluyville offrent un environnement d’apprentissage
+                                chaleureux et structuré. L’école primaire propose un enseignement de qualité, un suivi
+                                attentif et des services complémentaires comme l’orthopédagogie, le soutien pédagogique
+                                et un service de garde dynamique. Les élèves profitent d’activités variées et d’une
+                                collaboration étroite entre l’école, les familles et la communauté, créant un milieu
+                                éducatif accueillant et engagé..</p>
+                            <div class=" d-flex flex-column gap-2">
+                                <a href="#" class="stretched-link">CSBF</a>
+                                <a href="#" class="stretched-link">École primaire Notre-Dame de l'assomption</a>
+                                <a href="#" class="stretched-link">École secondaire Sainte-Anne</a>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="container justify-content-between align-items-center mt-5 mb-5">
 
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 order-md-last">
-                            <img src="Daveluyville-Images/fête famille août.jpg"
-                                class="img-fluid rounded-start float-end" alt="...">
+                        <div class="row g-0 bg-body-secondary position-relative">
+                            <div class="col-md-6 mb-md-0 p-md-4">
+                                <img src="Daveluyville-Images/logo-lapetiteecole.png" class="w-75" alt="...">
+
+                            </div>
+                            <div class="col-md-6 p-4 ps-md-0">
+                                <h5 class="mt-0">Centre de la petite enfance</h5>
+                                <p>Le CPE de Daveluyville offre un milieu encadré, chaleureux et éducatif pour les
+                                    tout-petits. Les milieux de garde en milieu familial complètent ce service en
+                                    proposant un environnement intime, flexible et personnalisé. Ensemble, ils assurent
+                                    aux familles des options de garde sécuritaires, stimulantes et adaptées à leurs
+                                    besoins.</p>
+                                <div class=" d-flex flex-column gap-2">
+                                    <a href="#" class="stretched-link">La petite école</a>
+                                    <a href="#" class="stretched-link">Bottin Milieu familliale</a>
+                                    <a href="#" class="stretched-link">Bureau coordonateur</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
-                                        ago</small>
-                                </p>
+                        <div class="container justify-content-between align-items-center mt-5 mb-5">
+
+                            <div class="row g-0 bg-body-secondary position-relative">
+                                <div class="col-md-6 mb-md-0 p-md-4">
+                                    <img src="Daveluyville-Images/logo-bibliotheque.jpg" class="w-50" alt="...">
+
+                                </div>
+                                <div class="col-md-6 p-4 ps-md-0">
+                                    <h5 class="mt-0">Bibliothèque municipale</h5>
+                                    <p>Grâce au bénévoles dévouées,la bibliothèque municipale de Daveluyville offre un
+                                        espace accueillant où petits
+                                        et grands peuvent découvrir une vaste sélection de livres, ressources numériques
+                                        et activités culturelles. C’est un lieu vivant d’apprentissage, de rencontres et
+                                        de créativité pour toute la communauté.</p>
+                                    <div class=" d-flex flex-column gap-2">
+                                        <a href="#" class="stretched-link">En savoir plus</a>
+                                    </div>
+                                </div>
                             </div>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 order-md-last">
-                            <img src="Daveluyville-Images/fête famille août.jpg"
-                                class="img-fluid rounded-start float-end" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
-                                        ago</small>
-                                </p>
-                            </div>
 
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 order-md-last">
-                            <img src="Daveluyville-Images/fête famille août.jpg"
-                                class="img-fluid rounded-start float-end" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
-                                        ago</small>
-                                </p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 order-md-last">
-                            <img src="Daveluyville-Images/fête famille août.jpg"
-                                class="img-fluid rounded-start float-end" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
-                                        ago</small>
-                                </p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
     </main>
 
 
