Ajout de la page loisirs

--- a/acceuil.html
+++ b/acceuil.html
@@ -104,10 +104,18 @@
                 <span class="visually-hidden">Next</span>
             </button>
             <div class="vstack gap-5 position-absolute top-0 start-0 mt-5">
-                <div class="loisirs"><h1>Loisirs</h1></div>
-                <div class="citoyens"><h1>Citoyens</h1></div>
-                <div class="municipalite"><h1>Municipalités</h1></div>
-                <div class="entreprises"><h1>Entreprises</h1></div>
+                <div class="loisirs">
+                    <h1>Loisirs</h1>
+                </div>
+                <div class="citoyens">
+                    <h1>Citoyens</h1>
+                </div>
+                <div class="municipalite">
+                    <h1>Municipalités</h1>
+                </div>
+                <div class="entreprises">
+                    <h1>Entreprises</h1>
+                </div>
             </div>
         </div>
         <div class="container container">
@@ -128,7 +136,7 @@
                                 </iframe>
                             </div>
                             <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG6MEhvXRM&#x2F;NeVy-eD2T3YDQ5s5N-urZA&#x2F;view?utm_content=DAG6MEhvXRM&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-                                target="_blank" rel="noopener"></a> 
+                                target="_blank" rel="noopener"></a>
                         </div>
                     </div>
                     <div class="card" style="width: 25rem;">
