--- a/loisirs.html
+++ b/loisirs.html
@@ -43,7 +43,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
-                    <img class="navbar-brand h-25 " src="Daveluyville-Images/logo-1.png" alt="" srcset="">
+                    <img class="navbar-brand h-100 " src="Daveluyville-Images/logo-1.png" alt="" srcset="">
                     <ul class="navbar-nav ms-auto mb-0 mb-lg-0 ">
                         <li class="nav-item mx-4">
                             <a class="nav-link" href="#">Loisirs</a>
@@ -72,7 +72,109 @@
     <body>
         <main>
 
+            <!-- Section Socioculturelle -->
+            <section class="container my-5">
+                <h2 class="mb-4 display-1">Socioculturelle</h2>
+                <div class="row g-4 justify-content-center">
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-dekhockey.jpg" class=" ratio h-60 w-50"
+                                alt="logo équipe dek hockey">
+                            <div class="card-body">
+                                <h5 class="card-title">DEK Hockey</h5>
+                                <p class="card-text">Chaque été, des équipes féminines et masculines se forment et
+                                    s’affrontent avec celles des villages avoisinants</p>
+                                <a href="https://www.facebook.com/DekHockeyDaveluyville/">
+                                    <i class="bi bi-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-patinage artistique.jpg" class=" ratio h-75 w-50"
+                                alt="Bibliothèque">
+                            <div class="card-body">
+                                <h5 class="card-title">Patinage artistique</h5>
+                                <p class="card-text">Le club est ouvert à tous, que tu sois enfant, ado ou adulte
+                                    débutant. L’approche graduelle — de l’initiation (Patinage Plus) jusqu’au patinage
+                                    artistique plus sérieux (STAR).
+
+                                    <a
+                                        href="https://www.facebook.com/p/Club-de-Patinage-Artistique-du-Grand-Daveluyville-100068183245031/?locale=fr_CA"><i
+                                            class="bi bi-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-4 justify-content-center">
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-campdejour.jpg" class=" ratio h-75 w-50"
+                                alt="Bibliothèque">
+                            <div class="card-body">
+                                <h5 class="card-title">Camp de jour</h5>
+                                <p class="card-text">Le camp s’adresse aux enfants de 4 à 12 ans.Il est disponible
+                                    pour les enfants résidant à Daveluyville, ou dans certaines localités voisines — ou
+                                    si un parent travaille à Daveluyville.</p>
+
+                                <a href="https://www.facebook.com/ballerapidedaveluyville/?locale=fr_FR"><i
+                                        class="bi bi-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-lesaigles-hockeymineur.jfif" class=" ratio h-75 w-50"
+                                alt="Bibliothèque">
+                            <div class="card-body">
+                                <h5 class="card-title">Équipe de Hockey-mineur</h5>
+                                <p class="card-text">Hockey mineur de Daveluyville est actif au sein de la communauté,
+                                    avec des équipes jeunesse qui évoluent à différents niveaux — pee-wee, bantam,
+                                    midget</p>
+                                <a href="https://www.facebook.com/ballerapidedaveluyville/?locale=fr_FR"><i
+                                        class="bi bi-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-4 justify-content-center">
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-ballerapide.png" class=" ratio h-75 w-50"
+                                alt="Bibliothèque">
+                            <div class="card-body">
+                                <h5 class="card-title">Balle rapide</h5>
+                                <p class="card-text">La ville organise des inscriptions chaque printemps pour plusieurs
+                                    catégories selon l’âge : T-Ball (U-7), U-9, U-13 (atome/moustique), U-17
+                                    (benjamin-cadet) et même une catégorie « Intermédiaire » pour les plus âgés.</p>
+                                <a href="https://www.facebook.com/ballerapidedaveluyville/?locale=fr_FR"><i
+                                        class="bi bi-facebook"></i></a>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="Daveluyville-Images/logo-osbl-generations.png" class="ratio h-75 w-100                                alt="Bibliothèque">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Le carrefour des générations</h5>
+                                <p class="card-text">Il met à disposition des services concrets : aide alimentaire,
+                                    soutien aux personnes vulnérables, accompagnement, référencements, écoute, et un
+                                    éventail d’activités collectives — pour jeunes, familles, aînés, ou toute personne
+                                    dans le besoin.</p>
+                                <a href="https://www.facebook.com/carrefourdesgenerations?locale=fr_CA"><i
+                                        class="bi bi-facebook"></i></a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h2 class="mb-4 display-1 text-center">Inscription</h2>
+            </section>
         </main>
 
 
